# brolly

./: CMakeLists.txt  README.md
cmake/: FindBrolly.cmake
include/: CrashHandler  assert.h
src/: brolly_Assert.h  brolly_CrashHandler.cpp  brolly_CrashHandler.h  brolly_ns.h
src/crash/: brolly_report.cpp
src/unix/: brolly_CrashHandler_p.h
src/win32/: assert_CrashHandler_p.h
